feat:Style navbar

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__loop">FTM</a>
+        <a href="#" class="nav__logo">FTM</a>
+
         <div class="nav__menu">
-          <ul class="nav_list">
+          <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link"> 
+              <a href="#home" class="nav__link active-link"> 
                 <i class='bx bx-home-alt'></i>
               </a>
             </li>
