--- a/index.html
+++ b/index.html
@@ -72,25 +72,72 @@
     <!--=============== MAIN ===============-->
     <main class="main">
       <!--=============== HOME ===============-->
-      <section class="home section" id="home"></section>
+      <section class="home section" id="home">
+          <div class="home__container container grid">
+              <div class="home__data">
+                  <span class="home__greeting">Hello, I'm</span>
+                  <h1 class="home__name">Fatema Nazari</h1>
+                  <h3 class="home__education">Full Stack Developer</h3>
+
+                  <div class="home__buttons">
+                      <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost">
+                          download CV
+                      </a>
+                      <a href="#about" class="button">About me</a>
+                  </div>
+              </div>
+              <div class="home_handle">
+                  <img src="assets/img/perfil.png" alt="" class="home__img">
+              </div>
+
+              <div class="home__social">
+                  <a href="" class="home__social-link">
+                    <i class='bx bxl-linkedin-square' ></i>
+                  </a>
+                  <a href="" class="home__social-link">
+                    <i class='bx bxl-github' ></i>
+                  </a>
+                  <a href="" class="home__social-link">
+                    <i class='bx bxl-dribbble' ></i>
+                  </a>
+              </div>
+
+              <a href="#about" class="home__scroll">
+                <i class='bx bx-mouse home__scroll-icon' ></i>
+                <span class="home__scroll-name">Scroll Down</span>
+              </a>
+          </div>
+      </section>
 
       <!--=============== ABOUT ===============-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+
+      </section>
 
       <!--=============== SKILLS ===============-->
-      <section class="skills section" id="skills"></section>
+      <section class="skills section" id="skills">
+
+      </section>
 
       <!--=============== SERVICES ===============-->
-      <section class="services section"></section>
+      <section class="services section">
+
+      </section>
 
       <!--=============== WORK ===============-->
-      <section class="work section" id="work"></section>
+      <section class="work section" id="work">
+
+      </section>
 
       <!--=============== TESTIMONIALS ===============-->
-      <section class="testimonial section"></section>
+      <section class="testimonial section">
+
+      </section>
 
       <!--=============== CONTACT ===============-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+
+      </section>
     </main>
 
     <!--=============== FOOTER ===============-->
