--- a/index.html
+++ b/index.html
@@ -34,38 +34,38 @@
         <div class="nav__menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link active-link"> 
-                <i class='bx bx-home-alt'></i>
+              <a href="#home" class="nav__link active-link">
+                <i class="bx bx-home-alt"></i>
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#about" class="nav__link"> 
-                <i class='bx bx-user' ></i>
+              <a href="#about" class="nav__link">
+                <i class="bx bx-user"></i>
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#skills" class="nav__link"> 
-                <i class='bx bx-book' ></i>
+              <a href="#skills" class="nav__link">
+                <i class="bx bx-book"></i>
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#work" class="nav__link"> 
-                <i class='bx bx-briefcase-alt-2' ></i>
+              <a href="#work" class="nav__link">
+                <i class="bx bx-briefcase-alt-2"></i>
               </a>
             </li>
 
             <li class="nav__item">
-                <a href="#contact" class="nav__link"> 
-                    <i class='bx bx-message-alt-detail' ></i>
-                </a>
-              </li>
+              <a href="#contact" class="nav__link">
+                <i class="bx bx-message-alt-detail"></i>
+              </a>
+            </li>
           </ul>
         </div>
         <!-- Theme change button -->
-        <i class='bx bx-moon change-theme' id="theme-button" ></i>
+        <i class="bx bx-moon change-theme" id="theme-button"></i>
       </nav>
     </header>
 
@@ -73,71 +73,95 @@
     <main class="main">
       <!--=============== HOME ===============-->
       <section class="home section" id="home">
-          <div class="home__container container grid">
-              <div class="home__data">
-                  <span class="home__greeting">Hello, I'm</span>
-                  <h1 class="home__name">Fatema Nazari</h1>
-                  <h3 class="home__education">Full Stack Developer</h3>
+        <div class="home__container container grid">
+          <div class="home__data">
+            <span class="home__greeting">Hello, I'm</span>
+            <h1 class="home__name">Fatema Nazari</h1>
+            <h3 class="home__education">Full Stack Developer</h3>
 
-                  <div class="home__buttons">
-                      <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost">
-                          download CV
-                      </a>
-                      <a href="#about" class="button">About me</a>
-                  </div>
-              </div>
-              <div class="home_handle">
-                  <img src="assets/img/perfil.png" alt="" class="home__img">
-              </div>
-
-              <div class="home__social">
-                  <a href="" class="home__social-link">
-                    <i class='bx bxl-linkedin-square' ></i>
-                  </a>
-                  <a href="" class="home__social-link">
-                    <i class='bx bxl-github' ></i>
-                  </a>
-                  <a href="" class="home__social-link">
-                    <i class='bx bxl-dribbble' ></i>
-                  </a>
-              </div>
-
-              <a href="#about" class="home__scroll">
-                <i class='bx bx-mouse home__scroll-icon' ></i>
-                <span class="home__scroll-name">Scroll Down</span>
+            <div class="home__buttons">
+              <a
+                download=""
+                href="assets/pdf/Ansel-Cv.pdf"
+                class="button button--ghost"
+              >
+                download CV
               </a>
+              <a href="#about" class="button">About me</a>
+            </div>
           </div>
+          <div class="home__handle">
+            <img src="assets/img/perfil.png" alt="" class="home__img" />
+          </div>
+
+          <div class="home__social">
+            <a href="" class="home__social-link">
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
+            <a href="" class="home__social-link">
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="" class="home__social-link">
+              <i class="bx bxl-dribbble"></i>
+            </a>
+          </div>
+
+          <a href="#about" class="home__scroll">
+            <i class="bx bx-mouse home__scroll-icon"></i>
+            <span class="home__scroll-name">Scroll Down</span>
+          </a>
+        </div>
       </section>
 
       <!--=============== ABOUT ===============-->
       <section class="about section" id="about">
+        <span class="section__subtitle">My Intro</span>
+        <h2 class="section__title">About Me</h2>
 
+        <div class="about__container container grid">
+          <img src="assets/img/about.jpg" alt="" class="about__img" />
+
+          <div class="about__data">
+            <div class="about__info">
+              <div class="about__box">
+                <i class="bx bx-award about__icon"></i>
+                <h3 class="about__title">Experience</h3>
+                <span class="about__subtitle">& Years Working</span>
+              </div>
+
+              <div class="about__box">
+                <i class="bx bx-briefcase-alt about__icon"></i>
+                <h3 class="about__title">Completed</h3>
+                <span class="about__subtitle">20 + Projects</span>
+              </div>
+            </div>
+
+            <p class="about__description">
+              I’m a software developer! I can help you build a product , feature
+              or website Look through some of my work and experience! If you
+              like what you see and have a project you need coded, don’t
+              hesitate to contact me.
+            </p>
+
+            <a href="#contact" class="button">Contact Me</a>
+          </div>
+        </div>
       </section>
 
       <!--=============== SKILLS ===============-->
-      <section class="skills section" id="skills">
-
-      </section>
+      <section class="skills section" id="skills"></section>
 
       <!--=============== SERVICES ===============-->
-      <section class="services section">
-
-      </section>
+      <section class="services section"></section>
 
       <!--=============== WORK ===============-->
-      <section class="work section" id="work">
-
-      </section>
+      <section class="work section" id="work"></section>
 
       <!--=============== TESTIMONIALS ===============-->
-      <section class="testimonial section">
-
-      </section>
+      <section class="testimonial section"></section>
 
       <!--=============== CONTACT ===============-->
-      <section class="contact section" id="contact">
-
-      </section>
+      <section class="contact section" id="contact"></section>
     </main>
 
     <!--=============== FOOTER ===============-->
