--- a/index.html
+++ b/index.html
@@ -149,7 +149,134 @@
       </section>
 
       <!--=============== SKILLS ===============-->
-      <section class="skills section" id="skills"></section>
+      <section class="skills section" id="skills">
+        <span class="section__subtitle">My abilities</span>
+        <h2 class="section__title">My Experience</h2>
+
+        <div class="skills__container container grid">
+          <div class="skills__content">
+            <h3 class="skills__title">Frontend Developer</h3>
+
+            <div class="skills__box">
+              <div class="skills__box">
+                <div class="skills__group">
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">HTML</h3>
+                      <span class="skills_level">Basic</span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">CSS</h3>
+                      <span class="skills_level">Advance</span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">JavaScript</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="skills__group">
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">Bootstrap</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">Git</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">React</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="skills__content">
+            <h3 class="skills__title">Backend Developer</h3>
+
+            <div class="skills__box">
+              <div class="skills__box">
+                <div class="skills__group">
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">PHP</h3>
+                      <span class="skills_level">Basic</span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">Node.js</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">Python</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="skills__group">
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">MySQL</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <i class='bx bxs-badge-check' ></i>
+
+                    <div>
+                      <h3 class="skills__name">Firebase</h3>
+                      <span class="skills_level">Intermediat</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--=============== SERVICES ===============-->
       <section class="services section"></section>
