--- a/index.html
+++ b/index.html
@@ -278,11 +278,70 @@
         </div>
       </section>
 
-      <!--=============== SERVICES ===============-->
-      <section class="services section"></section>
-
       <!--=============== WORK ===============-->
-      <section class="work section" id="work"></section>
+      <section class="work section" id="work">
+        <span class="section__subtitle">My Portfolio</span>
+        <h2 class="section__title">Recent works</h2>
+
+        <div class="work__filters">
+          <span class="work__item">All</span>
+          <span class="work__item">Web</span>
+          <span class="work__item">Movil</span>
+          <span class="work__item">Design</span>
+        </div>
+
+        <div class="work__container container grid">
+          <div class="work__card">
+              <img src="assets/img/work1.jpg" alt="" class="work__img">
+
+              <h3 class="work__title"></h3>
+
+              <a href="#" class="work__button">
+                Demo <i class='bx bx-right-arrow-alt' ></i>
+              </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/work1.jpg" alt="" class="work__img">
+
+            <h3 class="work__title"></h3>
+
+            <a href="#" class="work__button">
+              Demo <i class='bx bx-right-arrow-alt' ></i>
+            </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/work1.jpg" alt="" class="work__img">
+
+            <h3 class="work__title"></h3>
+
+            <a href="#" class="work__button">
+              Demo <i class='bx bx-right-arrow-alt' ></i>
+            </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/work1.jpg" alt="" class="work__img">
+
+            <h3 class="work__title"></h3>
+
+            <a href="#" class="work__button">
+              Demo <i class='bx bx-right-arrow-alt' ></i>
+            </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/work1.jpg" alt="" class="work__img">
+
+            <h3 class="work__title"></h3>
+
+            <a href="#" class="work__button">
+              Demo <i class='bx bx-right-arrow-alt' ></i>
+            </a>
+          </div>
+        </div>
+      </section>
 
       <!--=============== TESTIMONIALS ===============-->
       <section class="testimonial section"></section>
