feat:Add Style to contact section

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <input type="email" placeholder="Insert your email" class="contact__form-input">
               </div>
 
-              <div class="contact__form-div">
+              <div class="contact__form-div contact__form-area">
                 <label for="" class="contact__form-tag">Project</label>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Write your project" class="contact__form-input"></textarea>
               </div>
