--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
           </div>
 
           <div class="home__social">
-            <a href="" class="home__social-link">
+            <a href="" target="_blank" class="home__social-link">
               <i class="bx bxl-linkedin-square"></i>
             </a>
-            <a href="" class="home__social-link">
+            <a href="" target="_blank" class="home__social-link">
               <i class="bx bxl-github"></i>
             </a>
-            <a href="" class="home__social-link">
+            <a href="" target="_blank" class="home__social-link">
               <i class="bx bxl-dribbble"></i>
             </a>
           </div>
@@ -408,7 +408,41 @@
     </main>
 
     <!--=============== FOOTER ===============-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__container container">
+        <h1 class="footer__title">FTM</h1>
+
+        <ul class="footer__list">
+          <li>
+            <a href="#about" class="footer__link"></a>
+          </li>
+
+          <li>
+            <a href="#work" class="footer__link"></a>
+          </li>
+
+          <li>
+            <a href="#" class="footer__link"></a>
+          </li>
+        </ul>
+
+        <ul class="footer__social">
+          <a href="https://www.facebook.com/fatema.nazary.3?mibextid=ZbWKwL" target="_blank" class="footer__social-link">
+            <i class='bx bxl-facebook'></i>
+          </a>
+          <a href="https://instagram.com/n78_fatema?igshid=ZDc4ODBmNjlmNQ==" target="_blank" class="footer__social-link">
+            <i class='bx bxl-instagram' ></i>
+          </a>
+          <a href="https://twitter.com/fati_nazari78" target="_blank" class="footer__social-link">
+            <i class='bx bxl-twitter' ></i>
+          </a>
+        </ul>
+
+        <span class="footer__copy">
+          &#169; FTM. All rights reserved
+        </span>
+        </div>
+    </footer>
 
     <!--=============== SCROLLREVEAL ===============-->
     <script src=""></script>
