--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
             <h1 class="home__name">Fatema Nazari</h1>
             <h3 class="home__education">Full Stack Developer</h3>
 
+            <p class="about__description">
+              Full-stack Web Developer, Software Engineer and Expertise in Front-end, Back-end, and Database Technologies Team Player, 
+              Building Innovative and Scalable Solutions, Enjoy Collaborating
+            </p>
+
             <div class="home__buttons">
               <a
                 download=""
@@ -137,10 +142,11 @@
             </div>
 
             <p class="about__description">
-              I’m a software developer! I can help you build a product , feature
-              or website Look through some of my work and experience! If you
-              like what you see and have a project you need coded, don’t
-              hesitate to contact me.
+              Hi, I'm a full-stack developer with a passion for solving mysteries and overcoming challenges. 
+              My expertise lies in crafting exceptional web applications using JavaScript, React, Redux, Ruby on Rails, and PostgreSQL. 
+              I am passionate about creating top-notch products and continuously seek new challenges. 
+              My ultimate objective is to deliver web applications that offer an outstanding user experience. 
+              I collaborate closely with clients, translating their ideas into reality
             </p>
 
             <a href="#contact" class="button">Contact Me</a>
@@ -276,8 +282,16 @@
               <img src="assets/img/Project_1.PNG" alt="" class="work__img">
 
               <h3 class="work__title">Country Insights Hub</h3>
-
               <div class="skills__group">
+                <div class="skills__data">
+                  <p>
+                    Displays 10 countries on the homepage,</br>
+                    featuring Names, Flags, and Populations.</br>
+                    Clicking on a country reveals additional</br> 
+                    details, while the search bar allows for</br> 
+                    country name searches.
+                  </p>
+                </div>
                 <div class="skills__data">
                   <i class='bx bxs-badge-check' ></i>
 
@@ -295,21 +309,28 @@
                 </div>
               </div>
 
-              <a href="https://country-insights-hub-rnzs.onrender.com/" class="work__button">
+              <a target="_blank" href="https://country-insights-hub-rnzs.onrender.com/" class="work__button">
                 Live Demo <i class='bx bx-right-arrow-alt' ></i>
               </a>
 
-              <a href="https://github.com/78fatemanazari/country-insights-hub" class="work__button">
+              <a target="_blank" href="https://github.com/78fatemanazari/country-insights-hub" class="work__button">
                 Source Code <i class='bx bx-right-arrow-alt' ></i>
               </a>
           </div>
 
           <div class="work__card mix movil">
-            <img src="assets/img/project_2.PNG" alt="" class="work__img">
+            <img src="assets/img/project_5.PNG" alt="" class="work__img">
 
-            <h3 class="work__title">Book Store</h3>
+            <h3 class="work__title">Space-Travelers-Hub</h3>
 
             <div class="skills__group">
+              <div class="skills__data">
+                <p>
+                  The application will allow</br>
+                  users to book rockets and join</br>
+                  selected space missions.</br>
+                </p>
+              </div>
               <div class="skills__data">
                 <i class='bx bxs-badge-check' ></i>
 
@@ -335,10 +356,10 @@
               </div>
             </div>
 
-            <a href="https://78fatemanazari.github.io/react-bookstore/" class="work__button">
+            <a target="_blank" href="https://78fatemanazari.github.io/react-capstone/" class="work__button">
               Live Demo <i class='bx bx-right-arrow-alt' ></i>
             </a>
-            <a href="https://github.com/78fatemanazari/react-bookstore" class="work__button">
+            <a target="_blank" href="https://github.com/78fatemanazari/react-bookstore" class="work__button">
               Source Code <i class='bx bx-right-arrow-alt' ></i>
             </a>
           </div>
@@ -349,6 +370,15 @@
             <h3 class="work__title">Tesla Booking Car</h3>
 
             <div class="skills__group">
+              <div class="skills__data">
+                <p>
+                  Book your ideal Tesla model effortlessly</br>
+                  with our new Tesla vehicle booking app!</br>
+                  Enjoy daily rates on our five available</br>
+                  models, available in cities worldwide.</br>
+                  Experience the best service in the industry.</br>
+                </p>
+              </div>
               <div class="skills__data">
                 <i class='bx bxs-badge-check' ></i>
 
@@ -382,10 +412,10 @@
               </div>
             </div>
 
-            <a href="https://iturres.github.io/tesla-booking-front-end/" class="work__button">
+            <a target="_blank" href="https://iturres.github.io/tesla-booking-front-end/" class="work__button">
               Live Demo <i class='bx bx-right-arrow-alt' ></i>
             </a>
-            <a href="https://github.com/ITurres/tesla-booking-front-end" class="work__button">
+            <a target="_blank" href="https://github.com/ITurres/tesla-booking-front-end" class="work__button">
               Source Code <i class='bx bx-right-arrow-alt' ></i>
             </a>
           </div>
@@ -396,6 +426,16 @@
             <h3 class="work__title">DesignX Company</h3>
 
             <div class="skills__group">
+              <div class="skills__data">
+                <p>
+                  A conference web page project and the</br>
+                  content of a web design conference can</br>
+                  vary depending on the specific event,</br>
+                  but generally, it includes a range of</br>
+                  topics related to web design, development,</br>
+                  user experience, and digital marketing.</br>
+                </p>
+              </div>
               <div class="skills__data">
                 <i class='bx bxs-badge-check' ></i>
 
@@ -421,10 +461,10 @@
               </div>
             </div>
 
-            <a href="https://78fatemanazari.github.io/Capstone-project/" class="work__button">
+            <a target="_blank" href="https://78fatemanazari.github.io/Capstone-project/" class="work__button">
               Live Demo <i class='bx bx-right-arrow-alt' ></i>
             </a>
-            <a href="https://github.com/78fatemanazari/Capstone-project" class="work__button">
+            <a target="_blank" href="https://github.com/78fatemanazari/Capstone-project" class="work__button">
               Source Code <i class='bx bx-right-arrow-alt' ></i>
             </a>
           </div>
@@ -500,28 +540,14 @@
       <div class="footer__container container">
         <h1 class="footer__title">FTM</h1>
 
-        <ul class="footer__list">
-          <li>
-            <a href="#about" class="footer__link"></a>
-          </li>
-
-          <li>
-            <a href="#work" class="footer__link"></a>
-          </li>
-
-          <li>
-            <a href="#" class="footer__link"></a>
-          </li>
-        </ul>
-
         <ul class="footer__social">
-          <a href="https://www.facebook.com/fatema.nazary.3?mibextid=ZbWKwL" target="_blank" class="footer__social-link">
+          <a target="_blank" href="https://www.facebook.com/fatema.nazary.3?mibextid=ZbWKwL" target="_blank" class="footer__social-link">
             <i class='bx bxl-facebook'></i>
           </a>
-          <a href="https://instagram.com/n78_fatema?igshid=ZDc4ODBmNjlmNQ==" target="_blank" class="footer__social-link">
+          <a target="_blank" href="https://instagram.com/n78_fatema?igshid=ZDc4ODBmNjlmNQ==" target="_blank" class="footer__social-link">
             <i class='bx bxl-instagram' ></i>
           </a>
-          <a href="https://twitter.com/fati_nazari78" target="_blank" class="footer__social-link">
+          <a target="_blank" href="https://twitter.com/fati_nazari78" target="_blank" class="footer__social-link">
             <i class='bx bxl-twitter' ></i>
           </a>
         </ul>
