--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           </div>
 
           <div class="work__card mix movil">
-            <img src="assets/img/project_5.PNG" alt="" class="work__img">
+            <img src="assets/img/Project_5.PNG" alt="" class="work__img">
 
             <h3 class="work__title">Space-Travelers-Hub</h3>
 
