--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="home__container container grid">
           <div class="home__data">
             <span class="home__greeting">Hello, I'm</span>
-            <h1 class="home__name">Fatema Nazari</h1>
+            <h1 class="home__name">John Smith</h1>
             <h3 class="home__education">Full Stack Developer</h3>
 
             <div class="home__buttons">
